<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:layout_height="wrap_content"
        app:title="@string/compose_tweet_toolbar_title"
        android:theme="@style/ToolbarTheme">
    </androidx.appcompat.widget.Toolbar>


    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"
        tools:context=".ComposeActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="280">

            <EditText
                android:id="@+id/tweetText"
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/compose_tweet_edittext_hint"
                android:inputType="textMultiLine"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="40dp"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_input_layout"
            android:layout_alignEnd="@id/text_input_layout"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="0dp"
            android:background="@color/twitterLightBlue"
            android:text="@string/compose_tweet_button_text"
            android:textColor="#fff" />
    </RelativeLayout>

</LinearLayout>
